HtmlUi: Fix menu bar, it should never wrap its buttons

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/menu/MenuBar.css
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/menu/MenuBar.css
@@ -4,6 +4,7 @@
   position: relative;
   height: @menubar-height;
   border-bottom: 1px solid @desktop-border-color;
+  white-space: nowrap;
 
   & div {
     position: relative; /* reset a possible different value (e.g. set by .form-field) which might cause 'display: inline-block' to be ignored for the computed style */
